@@ -26,27 +26,50 @@
 #include "libts.h"
 #include "P_SSLNetProcessor.h"
 
+struct SSLCertConfigInfo
+{
+  volatile int m_refcount;
+ 
+  virtual ~SSLCertConfigInfo()
+  { }
+};
+
+
+class SSLCertConfigProcessor
+{
+public:
+  SSLCertConfigProcessor();
+
+  unsigned int set(unsigned int id, SSLCertConfigInfo * info);
+  SSLCertConfigInfo *get(unsigned int id);
+  void release(unsigned int id, SSLCertConfigInfo * data);
+
+public:
+  SSLCertConfigInfo *infos[MAX_CONFIGS];
+  int ninfos;
+};
+
 class SSLContextStorage;
 
-class SSLCertLookup
+class SSLCertLookup : public SSLCertConfigInfo
 {
-  bool buildTable(const SSLConfigParams * param);
   const char *extractIPAndCert(
     matcher_line * line_info, char **addr, char **cert, char **ca, char **priKey) const;
   bool addInfoToHash(
     const SSLConfigParams * param,
     const char *strAddr, const char *cert, const char *ca, const char *serverPrivateKey);
 
-  char              config_file_path[PATH_NAME_MAX];
-  bool              multipleCerts;
+  char                config_file_path[PATH_NAME_MAX];
 
   SSLContextStorage * ssl_storage;
   SSL_CTX *           ssl_default;
 
-public:
-  bool hasMultipleCerts() const { return multipleCerts; }
+  static int          id;
 
-  void init(const SSLConfigParams * param);
+public:
+  bool buildTable(const SSLConfigParams * param);
+  void checkDefaultContext();
+
   SSL_CTX *findInfoInHash(const char * address) const;
 
   // Return the last-resort default TLS context if there is no name or address match.
@@ -54,6 +77,11 @@ public:
 
   SSLCertLookup();
   ~SSLCertLookup();
+
+  static void startup();
+  static void reconfigure();
+  static SSLCertLookup * acquire();
+  static void release(SSLCertLookup *p);
 };
 
 extern SSLCertLookup sslCertLookup;
